--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,
+            initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="scripts.js"></script>
+    </head>
 
-    <body  onload="display()">
-        <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width,
-                initial-scale=1.0">
-            <title>Document</title>
-            <link rel="stylesheet" href="styles.css">
-            <script src="scripts.js"></script>
-        </head>
+    <body onload="display()">
         <header class="flex">
             <img src="assembly.svg" alt="flower logo">
             <!-- source: logodust.com -->
             <h1>Wildrose Finance</h1>
         </header>
+
         <div class="flex">
             <form class="container" id="form" onsubmit="add(); display(); return false;">
                 <h2 class="center">Application Form</h2>
@@ -64,9 +65,11 @@
 
                 <label class="block" for="currentClient">Is the customer a
                     current client?</label>
-                <input type="radio" id="yes" name="currentClient" value="CurrentClient">
+                <input type="radio" id="yes" name="currentClient"
+                    value="CurrentClient">
                 <label for="yes">Yes</label>
-                <input type="radio" id="no" name="currentClient" value="NewClient">
+                <input type="radio" id="no" name="currentClient"
+                    value="NewClient">
                 <label for="no">No</label>
 
                 <label class="block" for="gender">Gender</label>
@@ -104,8 +107,8 @@
 
                 <input class="block" type="submit" value="Submit">
             </form>
-            <div class="container"  id="arraydiv">
-                
+            <div class="container" id="arraydiv">
+
             </div>
         </div>
     </body>
