fixed validation errors

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
                     required>
 
-                <label class="block" for="currentClient">Is the customer a
+                <label class="block">Is the customer a
                     current client?</label>
                 <input type="radio" id="yes" name="currentClient"
                     value="CurrentClient">
@@ -73,7 +73,7 @@
                     value="NewClient">
                 <label for="no">No</label>
 
-                <label class="block" for="gender">Gender</label>
+                <label class="block">Gender</label>
                 <input type="radio" id="female" name="gender" value="female">
                 <label for="female">Female</label>
                 <input type="radio" id="Male" name="gender" value="Male">
@@ -84,21 +84,21 @@
                 <label class="block" for="age">Age:</label>
                 <input type="number" id="age" name="age" min="18">
 
-                <label class="block" for="ownership">Do you own or rent a home?</label>
-                <input type="radio" id="no" name="ownership" value="Renter">
-                <label for="no">Rent</label>
-                <input type="radio" id="yes" name="ownership" value="Homeowner">
-                <label for="yes">Own</label>
+                <label class="block">Do you own or rent a home?</label>
+                <input type="radio" id="Renter" name="ownership" value="Renter">
+                <label for="Renter">Rent</label>
+                <input type="radio" id="Homeowner" name="ownership" value="Homeowner">
+                <label for="Homeowner">Own</label>
 
                 <label class="block" for="income">What is your gross annual
                     income?</label>
                 <input type="number" id="income" name="income" min="0">
 
-                <label class="block" for="expenses">Please Check the box if you
+                <label class="block">Please Check the box if you
                     own any of the following.</label>
                 <input type="checkbox" id="vehicle" name="vehicle"
                     value="vehicle">
-                <label for="car">Car</label>
+                <label for="vehicle">Car</label>
                 <input type="checkbox" id="RRSP" name="RRSP" value="RRSP">
                 <label for="RRSP">RRSP</label>
                 <input type="checkbox" id="TFSA" name="TFSA" value="TFSA">
